# cScript

./: .gitignore  CMakeLists.txt  cScript.c
include/: publics.h  repl.h  repl.hpp  scriptCompile.h  utils.h
src/: cScript.c  main.c  repl.cpp  scriptCompile.c  utils.c
tests/: recursive.c
